@@ -1,3 +1,3 @@
-usr/lib/libsmbclient.a
-usr/lib/libsmbclient.so
+usr/lib/samba/libsmbclient.a usr/lib
+usr/lib/samba/libsmbclient.so usr/lib
 usr/include/libsmbclient.h
