@@ -1,1 +1,1 @@
-usr/lib/libwbclient.so.0
+usr/lib/samba/libwbclient.so.0 usr/lib
