@@ -1,7 +1,8 @@
 etc/samba/
+debian/gdbcommands etc/samba
 etc/dhcp3/
 usr/share/samba/lowcase.dat
-usr/share/samba/panic-action
-usr/share/samba/smb.conf*
+debian/panic-action usr/share/samba
+debian/smb.conf* usr/share/samba
 usr/share/samba/upcase.dat
 usr/share/samba/valid.dat
