@@ -1,10 +1,10 @@
-usr/bin/smbtorture
-usr/bin/msgtest
-usr/bin/masktest
-usr/bin/locktest
-usr/bin/locktest2
-usr/bin/nsstest
-usr/bin/vfstest
-usr/bin/pdbtest
-usr/bin/replacetort
-usr/bin/smbconftort
+source3/bin/smbtorture usr/bin
+source3/bin/msgtest usr/bin
+source3/bin/masktest usr/bin
+source3/bin/locktest usr/bin
+source3/bin/locktest2 usr/bin
+source3/bin/nsstest usr/bin
+source3/bin/vfstest usr/bin
+source3/bin/pdbtest usr/bin
+source3/bin/replacetort usr/bin
+source3/bin/smbconftort usr/bin
