@@ -1,0 +1,1 @@
+debian/mksmbpasswd.8
